chore: update some details. add chart README.md
release version 0.1.2

--- a/charts/canal-server/configs/instance.properties
+++ b/charts/canal-server/configs/instance.properties
@@ -27,7 +27,7 @@ canal.instance.tsdb.enable={{ $.Values.TsdbDBConf.enabled }}
 
 ## Standby mysql instance
 {{- if .item.standby.enabled }}
-canal.instance.standby.address = {{ .item.standby.address }}
+canal.instance.standby.address = {{ .item.standby.address }}:{{ .item.standby.port }}
 canal.instance.standby.journal.name={{ .item.standby.journalName }}
 canal.instance.standby.position={{ .item.standby.position }}
 canal.instance.standby.timestamp={{ .item.standby.timestamp }}
