--- a/index.yaml
+++ b/index.yaml
@@ -736,6 +736,7 @@ entries:
     urls:
     - https://github.com/dellnoantechnp/helm-chart-xxl-job-admin/releases/download/zookeeper-7.6.1/zookeeper-7.6.1.tgz
     version: 7.6.1
+  mongodb-shard:
   - annotations:
       category: Database
     apiVersion: v2
