--- a/charts/zookeeper/templates/svc.yaml
+++ b/charts/zookeeper/templates/svc.yaml
@@ -19,35 +19,53 @@ metadata:
   {{- end }}
 spec:
   type: {{ .Values.service.type }}
-  {{- if and (.Values.service.loadBalancerIP) (eq .Values.service.type "LoadBalancer") }}
+  {{- if and .Values.service.clusterIP (eq .Values.service.type "ClusterIP") }}
+  clusterIP: {{ .Values.service.clusterIP }}
+  {{- end }}
+  {{- if or (eq .Values.service.type "LoadBalancer") (eq .Values.service.type "NodePort") }}
+  externalTrafficPolicy: {{ .Values.service.externalTrafficPolicy | quote }}
+  {{- end }}
+  {{- if and (eq .Values.service.type "LoadBalancer") (not (empty .Values.service.loadBalancerSourceRanges)) }}
+  loadBalancerSourceRanges: {{ .Values.service.loadBalancerSourceRanges }}
+  {{- end }}
+  {{- if and (eq .Values.service.type "LoadBalancer") (not (empty .Values.service.loadBalancerIP)) }}
   loadBalancerIP: {{ .Values.service.loadBalancerIP }}
   {{- end }}
+  {{- if .Values.service.sessionAffinity }}
+  sessionAffinity: {{ .Values.service.sessionAffinity }}
+  {{- end }}
+  {{- if .Values.service.sessionAffinityConfig }}
+  sessionAffinityConfig: {{- include "common.tplvalues.render" (dict "value" .Values.service.sessionAffinityConfig "context" $) | nindent 4 }}
+  {{- end }}
   ports:
-    {{ if not .Values.service.disableBaseClientPort }}
+    {{- if not .Values.service.disableBaseClientPort }}
     - name: tcp-client
-      port: {{ .Values.service.port }}
+      port: {{ .Values.service.ports.client }}
       targetPort: client
       {{- if and (or (eq .Values.service.type "NodePort") (eq .Values.service.type "LoadBalancer")) (not (empty .Values.service.nodePorts.client)) }}
       nodePort: {{ .Values.service.nodePorts.client }}
       {{- else if eq .Values.service.type "ClusterIP" }}
       nodePort: null
       {{- end }}
-    {{ end }}
-    {{ if .Values.tls.client.enabled }}
+    {{- end }}
+    {{- if .Values.tls.client.enabled }}
     - name: tcp-client-tls
-      port: {{ .Values.service.tlsClientPort }}
+      port: {{ .Values.service.ports.tls }}
       targetPort: client-tls
-      {{- if and (or (eq .Values.service.type "NodePort") (eq .Values.service.type "LoadBalancer")) (not (empty .Values.service.nodePorts.clientTls)) }}
-      nodePort: {{ .Values.service.nodePorts.clientTls }}
+      {{- if and (or (eq .Values.service.type "NodePort") (eq .Values.service.type "LoadBalancer")) (not (empty .Values.service.nodePorts.tls)) }}
+      nodePort: {{ .Values.service.nodePorts.tls }}
       {{- else if eq .Values.service.type "ClusterIP" }}
       nodePort: null
       {{- end }}
-    {{ end }}
-    - name: follower
-      port: {{ .Values.service.followerPort }}
+    {{- end }}
+    - name: tcp-follower
+      port: {{ .Values.service.ports.follower }}
       targetPort: follower
     - name: tcp-election
-      port: {{ .Values.service.electionPort }}
+      port: {{ .Values.service.ports.election }}
       targetPort: election
+    {{- if .Values.service.extraPorts }}
+    {{- include "common.tplvalues.render" (dict "value" .Values.service.extraPorts "context" $) | nindent 4 }}
+    {{- end }}
   selector: {{- include "common.labels.matchLabels" . | nindent 4 }}
     app.kubernetes.io/component: zookeeper
