--- a/charts/kafka/Chart.yaml
+++ b/charts/kafka/Chart.yaml
@@ -1,32 +1,33 @@
 annotations:
   category: Infrastructure
 apiVersion: v2
-appVersion: 2.8.1
+appVersion: 3.2.0
 dependencies:
-  - name: common
-    repository: https://dellnoantechnp.github.io/helm-chart-xxl-job-admin/
-    tags:
-      - bitnami-common
-    version: 1.x.x
-  - condition: zookeeper.enabled
-    name: zookeeper
-    repository: https://dellnoantechnp.github.io/helm-chart-xxl-job-admin/
-    version: 7.x.x
-description: "[OpenSource by Bitnami] Apache Kafka is a distributed streaming platform."
-engine: gotpl
+- condition: zookeeper.enabled
+  name: zookeeper
+  repository: https://dellnoantechnp.github.io/helm-chart-xxl-job-admin/
+  version: 9.x.x
+- name: common
+  repository: https://dellnoantechnp.github.io/helm-chart-xxl-job-admin/
+  tags:
+  - bitnami-common
+  version: 1.x.x
+description: "[OpenSource by Bitnami] Apache Kafka is a distributed streaming platform designed to build real-time
+  pipelines and can be used as a message broker or as a replacement for a log aggregation
+  solution for big data applications."
 home: https://github.com/bitnami/charts/tree/master/bitnami/kafka
 icon: https://raw.githubusercontent.com/dellnoantechnp/helm-chart-xxl-job-admin/main/assets/stacks/kafka/img/kafka-stack-110x117.png
 keywords:
-  - kafka
-  - zookeeper
-  - streaming
-  - producer
-  - consumer
+- kafka
+- zookeeper
+- streaming
+- producer
+- consumer
 maintainers:
-  - email: containers@bitnami.com
-    name: Bitnami
+- email: containers@bitnami.com
+  name: Bitnami
 name: kafka
 sources:
-  - https://github.com/bitnami/bitnami-docker-kafka
-  - https://kafka.apache.org/
-version: 14.9.3
+- https://github.com/bitnami/bitnami-docker-kafka
+- https://kafka.apache.org/
+version: 17.1.0
