--- a/charts/prometheusalert/templates/deployment.yaml
+++ b/charts/prometheusalert/templates/deployment.yaml
@@ -15,6 +15,8 @@ spec:
       labels:
         app.kubernetes.io/name: {{ include "prometheusalert.name" . }}
         app.kubernetes.io/instance: {{ .Release.Name }}
+      annotations:
+        checksum/config-sha: {{ include (print $.Template.BasePath "/configmap.yaml") . | sha256sum }}
     spec:
       {{- if .Values.global.imagePullSecrets }}
       imagePullSecrets:
