--- a/charts/prometheusalert/values.yaml
+++ b/charts/prometheusalert/values.yaml
@@ -10,7 +10,7 @@ replicaCount: 1
 
 image:
   # 支持配置自定义模版需要重出镜像，或者使用本人构建镜像：feiyu563/prometheusalert:v4.8.2
-  repository: feiyu563/prometheus-alert:v4.9
+  repository: feiyu563/prometheus-alert:master
   pullPolicy: IfNotPresent
 
 nameOverride: ""
@@ -123,6 +123,7 @@ config:
     dd_isatall=1
     #是否开启钉钉机器人加签，0为关闭,1为开启
     # 使用方法：https://oapi.dingtalk.com/robot/send?access_token=XXXXXX&secret=mysecret
+    # 加签使用时需要注意 ddurl 中的 secret 接口参数的问题，详见Issue https://github.com/feiyu563/PrometheusAlert/issues/363
     open-dingding-secret=0
   
     #是否开启微信告警通道,可同时开始多个通道 0为关闭,1为开启
