--- a/charts/prometheusalert/values.yaml
+++ b/charts/prometheusalert/values.yaml
@@ -351,28 +351,37 @@ config:
     -- ----------------------------
     -- Records of prometheus_alert_d_b
     -- ----------------------------
-    INSERT INTO prometheus_alert_d_b (id, tpltype, tpluse, tplname, tpl, created) VALUES (1, 'dd', 'Prometheus', 'prometheus-dd', '{{ $var := .externalURL}}{{ range $k,$v:=.alerts }}
+    INSERT INTO prometheus_alert_d_b (id, tpltype, tpluse, tplname, tpl, created) VALUES (1, 'dd', 'Prometheus', 'prometheus-dd', '{{ $var := .externalURL}}
+    {{ range $k,$v:=.alerts }}
     {{if eq $v.status "resolved"}}
-    ## [Prometheus恢复信息]({{$v.generatorURL}})
-    #### [{{$v.labels.alertname}}]({{$var}})
-    ###### 告警级别：{{$v.labels.level}}
-    ###### 开始时间：{{TimeFormat $v.startsAt "2006-01-02 15:04:05"}}
-    ###### 结束时间：{{TimeFormat $v.endsAt "2006-01-02 15:04:05"}}
-    ###### 故障主机IP：{{$v.labels.instance}}
-    ##### {{$v.annotations.description}}
-    ![Prometheus](https://raw.githubusercontent.com/feiyu563/PrometheusAlert/master/doc/alert-center.png)
+    ## <font color="info">**Prometheus 恢复通知**</font>
+    ---
+    * 🟡【告警名称】{{$v.labels.alertname}}
+    * 🚨【告警级别】{{ $v.labels.severity}}
+    * ✅【告警状态】{{$v.status}}
+    * 🧭【开始时间】{{GetCSTtime $v.startsAt}}
+    * 🧭【结束时间】{{GetCSTtime $v.endsAt}}
+    * 🏷️【命名空间】{{$v.labels.namespace}}
+    * 📡【实例名称】{{$v.labels.host}}{{$v.labels.pod}}{{$v.labels.job}}{{$v.labels.deployment}}{{$v.labels.statefulset}}
+    * 📝【告警详情】{{ $v.annotations.message }}{{ $v.annotations.description}};{{$v.annotations.summary}}
     {{else}}
-    ## [Prometheus告警信息]({{$v.generatorURL}})
-    #### [{{$v.labels.alertname}}]({{$var}})
-    ###### 告警级别：{{$v.labels.level}}
-    ###### 开始时间：{{TimeFormat $v.startsAt "2006-01-02 15:04:05"}}
-    ###### 结束时间：{{TimeFormat $v.endsAt "2006-01-02 15:04:05"}}
-    ###### 故障主机IP：{{$v.labels.instance}}
-    ##### {{$v.annotations.description}}
-    ![Prometheus](https://raw.githubusercontent.com/feiyu563/PrometheusAlert/master/doc/alert-center.png)
-    {{end}}
-    {{ end }}
-    {{ $urimsg:=""}}{{ range $key,$value:=.commonLabels }}{{$urimsg =  print $urimsg $key "%3D%22" $value "%22%2C" }}{{end}}[*** 点我屏蔽该告警]({{$var}}/#/silences/new?filter=%7B{{SplitString $urimsg 0 -3}}%7D)', '2022-05-26 10:00:05');
+    ##  <font color="#FF0000">**Prometheus 告警通知**</font>
+    ---
+    * 🟡【告警名称】{{$v.labels.alertname}}
+    * 🚨【告警级别】{{ $v.labels.severity}}
+    * 🔥【告警状态】{{$v.status}}
+    * 🧭【开始时间】{{GetCSTtime $v.startsAt}}
+    * 🏷️【命名空间】{{$v.labels.namespace}}
+    * 📡【实例名称】{{$v.labels.host}}{{$v.labels.pod}}{{$v.labels.job}}{{$v.labels.deployment}}{{$v.labels.statefulset}}
+    * 📝【告警详情】{{ $v.annotations.message }}{{ $v.annotations.description}};{{$v.annotations.summary}}
+      {{ end }}
+      {{ end }}
+      {{ $urimsg:="" }}
+      {{ range $key,$value:=.commonLabels }}
+        {{$urimsg = print $urimsg $key "%3D%22" $value "%22%2C" }}
+      {{end}}
+    ---
+    🤫*[屏蔽该告警]({{$var}}/#/silences/new?filter=%7B{{SplitString $urimsg 0 -3}}%7D)*', '2024-02-26 10:00:00');
     INSERT INTO prometheus_alert_d_b (id, tpltype, tpluse, tplname, tpl, created) VALUES (2, 'wx', 'Prometheus', 'prometheus-wx', '{{ $var := .externalURL}}{{ range $k,$v:=.alerts }}{{if eq $v.status "resolved"}}[PROMETHEUS-恢复信息]({{$v.generatorURL}})
     > **[{{$v.labels.alertname}}]({{$var}})**
     > <font color="info">告警级别:</font> {{$v.labels.level}}
