chore: Update GlusterFS third-party CSI Driver Kadalu-CSI-driver        support prometheus /metrics/.

--- a/charts/kadalu-operator/templates/operator/deployment.yaml
+++ b/charts/kadalu-operator/templates/operator/deployment.yaml
@@ -4,6 +4,7 @@ metadata:
   name: {{ include "common.names.fullname" . }}
   namespace: {{ .Release.Namespace }}
   labels: {{- include "common.labels.standard" . | nindent 4 }}
+    app.kubernetes.io/part-of: kadalu
     app.kubernetes.io/component: kadalu-operator
     {{- if .Values.commonLabels }}
     {{- include "common.tplvalues.render" ( dict "value" .Values.commonLabels "context" $ ) | nindent 4 }}
@@ -19,6 +20,7 @@ spec:
   template:
     metadata:
       labels: {{- include "common.labels.standard" . | nindent 8 }}
+        app.kubernetes.io/part-of: kadalu
         app.kubernetes.io/component: kadalu-operator
         {{- if .Values.commonLabels }}
         {{- include "common.tplvalues.render" ( dict "value" .Values.commonLabels "context" $ ) | nindent 8 }}
