--- a/charts/kadalu-operator/templates/csi-nodeplugin/daemonset.yaml
+++ b/charts/kadalu-operator/templates/csi-nodeplugin/daemonset.yaml
@@ -5,6 +5,7 @@ metadata:
   name: kadalu-csi-nodeplugin
   namespace: {{ .Release.Namespace }}
   labels: {{- include "common.labels.standard" . | nindent 4 }}
+    app.kubernetes.io/part-of: kadalu
     app.kubernetes.io/component: csi-driver
 spec:
   selector:
@@ -13,6 +14,7 @@ spec:
   template:
     metadata:
       labels: {{- include "common.labels.standard" . | nindent 8 }}
+        app.kubernetes.io/part-of: kadalu
         app.kubernetes.io/component: csi-driver
       namespace: {{ .Release.Namespace }}
     spec:
