bugfix: Update PrometheusAlert version 1.2.2         Update AlertmanagerConfig namespace setting

--- a/charts/prometheusalert/templates/AlertmanagerConfig.yaml
+++ b/charts/prometheusalert/templates/AlertmanagerConfig.yaml
@@ -10,6 +10,9 @@ metadata:
     {{- if .labels }}
     {{ .labels | toYaml }}
     {{- end }}
+  {{- if .namespace }}
+  namespace: {{ .namespace }}
+  {{- end }}
 spec:
   {{- if .inhibitRules }}
   inhibitRules:
