--- a/charts/kadalu-operator/values.yaml
+++ b/charts/kadalu-operator/values.yaml
@@ -100,31 +100,34 @@ operator:
   ## Prometheus Operator PrometheusRule configuration
   ##
   prometheusRule:
-    ## @param metrics.prometheusRule.enabled Create a PrometheusRule for Prometheus Operator
+    ## @param operator.prometheusRule.enabled Create a PrometheusRule for Kadalu-Operator
     ##
     enabled: false
-    ## @param metrics.prometheusRule.namespace Namespace for the PrometheusRule Resource (defaults to the Release Namespace)
+    ## @param operator.prometheusRule.namespace Namespace for the PrometheusRule Resource (defaults to the Release Namespace)
     ##
     namespace: ""
-    ## @param metrics.prometheusRule.additionalLabels Additional labels that can be used so PrometheusRule will be discovered by Prometheus
+    ## @param operator.prometheusRule.additionalLabels Additional labels that can be used so PrometheusRule will be discovered by Prometheus
     ##
     additionalLabels: { }
-    ## @param metrics.prometheusRule.rules PrometheusRule definitions
-    ##  - alert: ZooKeeperSyncedFollowers
+    ## @param operator.prometheusRule.rules PrometheusRule definitions
+    ##  - alert: KadaluOperatorReadyContainerPercentile
     ##    annotations:
-    ##      message: The number of synced followers for the leader node in ZooKeeper deployment my-release is less than 2. This usually means that some of the ZooKeeper nodes aren't communicating properly. If it doesn't resolve itself you can try killing the pods (one by one).
-    ##    expr: max(synced_followers{service="my-release-metrics"}) < 2
+    ##      message: Kadalu-Operator Container is not all ready. current ready percentile is {{ $value | humanizePercentage }}
+    ##    expr: kadalu_total_number_of_ready_containers{name=~"kadalu-operator-.*"} /
+    ##          kadalu_total_number_of_containers{name=~"kadalu-operator-.*"}
+    ##          != 1
     ##    for: 5m
     ##    labels:
     ##      severity: critical
-    ##  - alert: ZooKeeperOutstandingRequests
+    ##  - alert: KadaluProvisionerReadyContainerPercentile
     ##    annotations:
-    ##      message: The number of outstanding requests for ZooKeeper pod {{ $labels.pod }} is greater than 10. This can indicate a performance issue with the Pod or cluster a whole.
-    ##    expr: outstanding_requests{service="my-release-metrics"} > 10
+    ##      message: kadalu-csi-provisioner Container is not all ready. current ready percentile is {{ $value | humanizePercentage }}
+    ##    expr: kadalu_total_number_of_ready_containers{name=~"kadalu-csi-provisioner-.*"} /
+    ##          kadalu_total_number_of_containers{name=~"kadalu-csi-provisioner-.*"}
+    ##          != 1
     ##    for: 5m
     ##    labels:
     ##      severity: critical
-    ##
     rules: [ ]
 
 # Values while deploying csi-nodeplugin
@@ -133,15 +136,18 @@ csi_nodeplugin:
   verbose: 'no'
 
 external_storage:
-  - enabled: true
-    name: kadalu-ext-1
+  - name: kadalu-ext-1
+    enabled: false
+    ## multi glusterfs hosts
     glusterfs_hosts:
       - ip1_or_hostname1
       - ip2_or_hostname2
     glusterfs_volume_name: gfs_hdd_volume
     glusterfs_options: "log-level=DEBUG"
-  - enabled: true
-    name: kadalu-ext-2
+
+  - name: kadalu-ext-2
+    enabled: false
+    ## only single host
     glusterfs_hosts: host-name
     glusterfs_volume_name: gfs_ssd_volume
     glusterfs_options: "log-level=DEBUG"
