chore: Update GlusterFS third-party CSI Driver Kadalu-CSI-driver 1.2.3        support prometheusRule.

--- a/charts/kadalu-operator/templates/csi-nodeplugin/daemonset.yaml
+++ b/charts/kadalu-operator/templates/csi-nodeplugin/daemonset.yaml
@@ -9,7 +9,7 @@ metadata:
     app.kubernetes.io/component: csi-driver
 spec:
   selector:
-    matchLabels: {{- include "common.labels.standard" . | nindent 6 }}
+    matchLabels: {{- include "common.labels.matchLabels" . | nindent 6 }}
       app.kubernetes.io/component: csi-driver
   template:
     metadata:
